--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     International Keynote Speaker. <br>
     Author. <br>
     Conference Organizer and Community Facilitator. <br>
-    Engineering Manager at F-Secure. <br>
+    Lead Quality Engineer at F-Secure. <br>
     She/Her. <br>
     <br>
 
@@ -97,9 +97,9 @@
             <!--<li><a href="books.html">Books</a></li>-->
             <li><span class="icon-fort-awesome"></span><a href="myTalks.html"> Speaking</a></li>
             <li><span class="icon-book"></span><a href="http://exploratorytesting.xyz" target="_blank"> LeanPub: Exploratory Testing</a></li>
-            <li><span class="icon-book"></span><a href="http://mobprogrammingguidebook.xyz" target="_blank"> LeanPub: Mob Programming Guidebook</a></li>
+            <li><span class="icon-book"></span><a href="http://mobprogrammingguidebook.xyz" target="_blank"> Mob Programming Guidebook</a></li>
             <li><span class="icon-book"></span><a href="http://strongstylepairprogramming.xyz" target="_blank"> LeanPub: Strong-Style Pair Programming</a></li>
-            <li>  <span class="icon-ticket"></span><a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing" target="_blank">My talk and course brochures</a></li>
+            <li><span class="icon-ticket"></span><a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing" target="_blank">My talk and course brochures</a></li>
 
 
         </ul>
@@ -109,10 +109,9 @@
         <h3>... and my projects</h3>
         <ul>
           <li><a href="http://europeantestingconference.eu"> European Testing Conference </a> </li>
-          <li><a href="https://speaking-easy.com"> Speak Easy </a></li>
+          <li><a href="https://techvoices.org"> Tech Voices </a></li>
           <li><a href="http://testausyhdistys.fi"> Finnish Association for Software Testing</a></li>
           <li><a href="https://www.meetup.com/Tech-Excellence-Finland/"> Tech Excellence Finland Meetup </a></li>
-        <!--  <li>Awesome Tester Conference (coming up)</li>-->
         </ul>
     </div>
 </footer>
