--- a/myArticles.html
+++ b/myArticles.html
@@ -46,6 +46,8 @@
   <h2>ARTICLES</h2>
 
   <ul style="text-align: left;">
+    <li>Intersection of Exploratory Testing and Test Automation (to be published in spring 2020 in <a href="https://www.quality-matters.org/">Quality Matters</a> 1/2020
+    <li><a href="https://drive.google.com/open?id=1soKIBGN5cunqVFoiBtSEB4pVwNJfD8TZ">Test Automation Process Improvement in a DevOps Team: Experience Report</a>
     <li><a href="https://dojo.ministryoftesting.com/lessons/mob-testing-an-introduction-experience-report">Mob Testing - an Introduction and Experience Report</a>. In <i>Ministry of Testing, the Testing Planet 2018</i>, January 2018.
 	  <li>Making Teams Awesome (to be published in autumn 2018) in <a href="https://www.quality-matters.org/">Quality Matters</a> 1/2018
 	  <li><a href="https://dojo.ministryoftesting.com/lessons/mob-testing-an-introduction-experience-report">Mob Testing: An Introduction and Experience Report</a> <i>in Ministry of Testing, the Testing Planet 2018</i>, January 2018.
@@ -70,6 +72,8 @@
   <h2>PODCAST APPEARANCES</h2>
 
   <ul style="text-align: left;">
+    <li>Agilpodden, spring 2020 </li>
+    <li>Webbidevaus.fi, <a href="https://webbidevaus.fi/44">React Finland 2: Designkirjastot ja testaaminen</a> May 2019 </li>
     <li>IT Career Energizer, <a href="https://podcasts.apple.com/us/podcast/learn-not-to-be-afraid-doing-things-differently-maaret/id1231387865?i=1000435108093">Learn Not to be Afraid of Doing Things Differently with Maaret Pyhajarvi</a> April 2019</li>
     <li>The Guilty Tester, <a href="https://testingpodcast.com/the-guilty-tester-episode-4-maaret-pyhajarvi-working-together-is-hard/">Working Together is Hard, Maaret Pyhäjärvi</a> September 2018</li>
 	  <li>Cucumber Podcast, <a href="https://soundcloud.com/cucumber-podcast/collaboration-between-testers-and-devs">Collaboration between testers and developers, Maaret Pyhäjärvi & Franziska Sauerwein </a> March 2018</li>
