--- a/myTalks.html
+++ b/myTalks.html
@@ -66,12 +66,9 @@
 
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
-  I will be in<br />
-  <ul style="text-align: left;">
-    <li><a href="https://jaxlondon.com/">JAX London</a> in London, United Kingdom October 7-10th 2019
-    <li><a href="https://serverless-architecture.io/">Serverless Architecture Conference</a> in Berlin, Germany October 15-16th 2019</li>
-    <li><a href="https://eventil.com/events/flowcon-2019/">FlowCon</a> in Paris, France, December 12-13th 2019</li>
-  </ul>
+</p>I'm taking a break from conferences after I reached 400 sessions Dec 13th 2019,
+happy to appear in podcasts, webinars and anything that requires no travel. <p>
+
 
   <!--
   <H2>UPCOMING PUBLIC TRAININGS</H2>
@@ -90,8 +87,17 @@
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>Exploratory Testing Essentials</i><br />
+    &nbsp; Speaker at TechWell Webinar (2.4.2020), Online<br />
+  <br />
+
 <i>Agile as If You Meant It</i><br />
-    &nbsp; Speaker at FlowCon 2019 (13.12.2019), Paris, France<br />
+      &nbsp; Speaker at Brewing Agile 2020 (4.3.2020), Gothenburg, Sweden<br />
+      &nbsp; Speaker at FlowCon 2019 (13.12.2019), Paris, France<br />
+    <br />
+
+<i>Exploratory Testing Essentials (4 hrs)</i><br />
+    &nbsp; Trainer at TBrewing Agile 2020 (4.3.2020), Gothenburg, Sweden<br />
   <br />
 
 <i>Exploratory Testing on Computer Interfaces</i><br />
