--- a/myTalks.html
+++ b/myTalks.html
@@ -69,6 +69,10 @@
 </p>I'm taking a break from conferences after I reached 400 sessions Dec 13th 2019,
 happy to appear in podcasts, webinars and anything that requires no travel. <p>
 
+Presenting a paper in an academic conference (ICST / NEXTA):
+<ul>
+  <li> Test Automation Process Improvement in a DevOps Team: Experience Report at NEXTA 2020</li>
+  </ul>
 
   <!--
   <H2>UPCOMING PUBLIC TRAININGS</H2>
@@ -96,8 +100,12 @@ happy to appear in podcasts, webinars and anything that requires no travel. <p>
       &nbsp; Speaker at FlowCon 2019 (13.12.2019), Paris, France<br />
     <br />
 
+<i>Diversifying Test Approaches using Constraints (1 day course)</i><br />
+  &nbsp; Trainer at F-Secure (11.3.2020), Helsinki, Finland<br />
+<br />
+
 <i>Exploratory Testing Essentials (4 hrs)</i><br />
-    &nbsp; Trainer at TBrewing Agile 2020 (4.3.2020), Gothenburg, Sweden<br />
+    &nbsp; Trainer at Brewing Agile 2020 (4.3.2020), Gothenburg, Sweden<br />
   <br />
 
 <i>Exploratory Testing on Computer Interfaces</i><br />
@@ -220,6 +228,7 @@ happy to appear in podcasts, webinars and anything that requires no travel. <p>
 <br />
 
 <i>Exploratory Testing Work Course</i><br />
+&nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (18-19.3.2020) <br />
 &nbsp; Trainer for a customer organization (1-day), London, UK (16.1.2019) <br />
 &nbsp; Trainer for Alma (2-days), Helsinki, Finland (4-5.9.2018) <br />
 &nbsp; Trainer for F-Secure internal (1-day), Oulu, Finland 15.8.2018 <br />
