--- a/myArticles.html
+++ b/myArticles.html
@@ -46,6 +46,7 @@
   <h2>ARTICLES</h2>
 
   <ul style="text-align: left;">
+    <li>Fighting against Automation isn't doing anyone a favor in <a href="https://leanpub.com/AroundTheWorldWith80SoftwareTesters">Viv Richard's book Around the World with 80 Software Testers</a> 4/2020
     <li>Intersection of Exploratory Testing and Test Automation (to be published in spring 2020 in <a href="https://www.quality-matters.org/">Quality Matters</a> 1/2020
     <li><a href="https://drive.google.com/open?id=1soKIBGN5cunqVFoiBtSEB4pVwNJfD8TZ">Test Automation Process Improvement in a DevOps Team: Experience Report</a>
     <li><a href="https://dojo.ministryoftesting.com/lessons/mob-testing-an-introduction-experience-report">Mob Testing - an Introduction and Experience Report</a>. In <i>Ministry of Testing, the Testing Planet 2018</i>, January 2018.
