Adding Exploratory Testing Index

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
           <li><a href="https://techvoices.org"> Tech Voices </a></li>
           <li><a href="http://testausyhdistys.fi"> Finnish Association for Software Testing</a></li>
           <li><a href="https://www.meetup.com/Tech-Excellence-Finland/"> Tech Excellence Finland Meetup </a></li>
+          <ku><a href="ETI.html">Exploratory Testing Index</a></li>
         </ul>
     </div>
 </footer>
