1st version of ETI

--- a/ETI.html
+++ b/ETI.html
@@ -22,8 +22,97 @@
     	</ul>
   </nav>
 
-  <h1>Exploratory Testing Index</h1>
+<h1>Exploratory Testing Index</h1>
 
+<h2>What is Exploratory Testing</h2>
+
+<ul>
+<li><a href="https://medium.com/@maaret.pyhajarvi/what-is-exploratory-testing-620057cf75b4">
+  What is Exploratory Testing?</a></li>
+<li><a href="https://medium.com/@maaret.pyhajarvi/what-is-exploratory-testing-88d967060145">
+  What is Exploratory Testing?</a></li>
+<li><a href="https://blog.usejournal.com/what-is-exploratory-testing-the-programmer-edition-881765411f2c">
+  What is Exploratory Testing - Programmer Edition</a></li>
+</ul>
+
+<h2>Three Kinds of State of the Art of Exploratory Testing</h2>
+
+<h2>Self-Managament in Exploratory Testing</h2>
+
+<ul>
+<li><a href="https://www.ministryoftesting.com/dojo/lessons/how-to-explore-with-intent-exploratory-testing-self-management">
+  How to Explore with Intent - Exploratory Testing Self-Management</a></li>
+</ul>
+
+<h2>Notetaking and Reporting</h2>
+
+<ul>
+<li><a href="https://drive.google.com/file/d/0B07e3JZGe_haMjZPUXQwLThlbnM/view">
+  Use of Rapid Reporter in Exploratory Testing</a></li>
+</ul>
+
+<h2>Automation in Exploratory Testing</h2>
+
+<ul>
+<li><a href="https://drive.google.com/open?id=1GzIUGBViMB2Kjq6tUOCSRPHpY95IeA9t">
+  Intersection of Exploratory Testing and Test Automation</a></li>
+<li><a href="https://drive.google.com/open?id=1H5MIzI7eT2ZKK2D2Jn-yx2QMvO8UJMjY0N6N6afuy6k">
+  Fighting Against Automation Isn't Doing Anyone a Favor</a></li>
+</ul>
+
+<h2>Specifications in Exploratory Testing </h2>
+
+<h2>Whole systems as target in Exploratory Testing</h2>
+
+<h2>APIs as target in Exploratory Testing</h2>
+
+<ul>
+<li><a href="https://www.ministryoftesting.com/dojo/lessons/exploratory-testing-an-api">
+  Exploratory Testing an API</a></li>
+</ul>
+
+<h2>Code as target in Exploratory Testing</h2>
+<ul>
+<li><a href="https://medium.com/@maaret.pyhajarvi/exploring-gilded-rose-f06ca76925a2">Exploring Gilded Rose</a>
+</ul>
+
+
+
+<h2>Pair (Exploratory) Testing</h2>
+<ul>
+  <li><a href="https://medium.com/@maaret.pyhajarvi/styles-of-pair-testing-18970bbad833">
+    Styles of Pair Testing</a>
+</ul>
+
+<h2>Mob (Exploratory) Testing </h2>
+
+<ul>
+<li><a href="https://medium.com/@maaret.pyhajarvi/mob-testing-how-to-enable-better-habits-and-skills-16945416a0f6">
+  Mob Testing - How to Enable Better Habits and Skills.</a></li>
+<li><a href="https://www.ministryoftesting.com/dojo/lessons/mob-testing-an-introduction-experience-report">
+  Mob Testing: An Introduction and an Experience Report</a></li>
+<li><a href="https://www.stickyminds.com/article/amplified-learning-mob-testing">
+  Amplified Learning with Mob Testing</a></li>
+</ul>
+
+
+
+<h2>Teaching Exploratory Testing</h2>
+
+
+<h2>Increasing Your Impact</h2>
+
+<ul>
+<li><a href="https://drive.google.com/file/d/0B07e3JZGe_haVmRfOUFDLWRMcVU/view">
+  Five Controversial Ideas to Increase Your Impact as a Tester</a></li>
+</ul>
+
+<h2>Questions and Answers</h2>
+
+<ul>
+<li><a href="https://drive.google.com/open?id=1t8SOML_ER9izj5iyG_Ar29XHrL6rcJAy1kMHAVclFyw">
+  Exploratory Testing Essentials - Questions and Answers</a></li>
+</ul>
 
 
 </body>
