Adding more to ETI

--- a/myArticles.html
+++ b/myArticles.html
@@ -81,7 +81,9 @@
     <li><a href="https://drive.google.com/file/d/1JONa8kSIuJ7bCfYBp3eQurWMkSeHEGKK/view?usp=sharing">
       Increasing Understanding of the Modern Testing Perspective in Software Product Development Projects</a>.
       in <i>the Proceedings of the Hawai'i International Conference on System Sciences</i>, 2003.</li>
-    <li><a href="https://drive.google.com/open?id=0B07e3JZGe_haX0JyTGtuMDRHczg">A Tentative Framework for Managing Software Product Development in Small Companies.</a> In <i>Proceedings of HICCS</i>, 2002.</li>
+    <li><a href="https://drive.google.com/open?id=0B07e3JZGe_haX0JyTGtuMDRHczg">
+      A Tentative Framework for Managing Software Product Development in Small Companies.</a>
+      In <i>Proceedings of HICCS</i>, 2002.</li>
   </ul>
 
   <h2>PODCAST APPEARANCES</h2>
