fix(html): add page title elements to HTML files
- Add page title elements to HTML files
- Improve how website is visible on the web
  - Better discoverability via search engines
  - Better web browser tab navigation
  - Better web browser bookmarks
  - Better accessibility for screen readers

More details:

- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/title

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html dir="ltr" lang="en-US">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Maaret Pyhäjärvi</title>
   <link href="https://fonts.googleapis.com/css?family=Lato|Lobster" rel="stylesheet">
-   <link type="text/css" rel="stylesheet" href="new_styles.css" media="all" />
+  <link type="text/css" rel="stylesheet" href="new_styles.css" media="all" />
   <link rel="stylesheet" href="img/icomoon/style.css"></head>
 </head>
 
