--- a/myTalks.html
+++ b/myTalks.html
@@ -2,6 +2,7 @@
 <html dir="ltr" lang="en-US">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Speaking Engagements | Maaret Pyhäjärvi</title>
   <link href="https://fonts.googleapis.com/css?family=Lato|Lobster" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="new_styles.css" media="all" />
   <link rel="stylesheet" href="img/icomoon/style.css"></head>
