fix(html): improve code structure
- Improve code structure & readability
- Improve HTML list structure
- Add OpenGraph page metadata
- Add more metadata to describe page content
- Add `rel="me"` microformats metadata to links
- Add `rel="noopener noreferrer"` to improve website security
- Update link URLs from `http` to `https`

More details:

- https://indieweb.org/rel-me
- http://microformats.org/wiki/rel-me
- https://developers.google.com/web/tools/lighthouse/audits/noopener
- https://jakearchibald.com/2016/performance-benefits-of-rel-noopener/
- https://mathiasbynens.github.io/rel-noopener/

--- a/index.html
+++ b/index.html
@@ -2,7 +2,19 @@
 <html dir="ltr" lang="en-US">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta charset="utf-8">
+
   <title>Maaret Pyhäjärvi</title>
+  <meta property="og:title" content="Maaret Pyhäjärvi">
+  <meta property="og:url" content="https://maaretp.com/">
+  <meta property="og:description" name="description" content="">
+  <meta property="og:site_name" content="maaretp.com">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+
+  <meta name="twitter:creator" content="@maaretp">
+  <meta name="author" content="Maaret Pyhäjärvi">
+
   <link href="https://fonts.googleapis.com/css?family=Lato|Lobster" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="new_styles.css" media="all" />
   <link rel="stylesheet" href="img/icomoon/style.css"></head>
@@ -82,36 +94,78 @@
 <footer class="main-footer">
     <div class="contact">
         <h3>Get in Touch</h3>
-        <span class="icon-envelope-o"></span> <a href="mailto:maaret@iki.fi"> maaret@iki.fi</a><p>
-        <span class="icon-twitter-square"></span> <a href="http://twitter.com/maaretp" target="_blank"> Follow me</a><br>
-        <span class="icon-facebook-square"></span> <a href="http://facebook.com/MaaretPy/" target="_blank"> Like my page</a><br>
-        <span class="icon-linkedin-square"></span> <a href="https://fi.linkedin.com/in/maaret" target="_blank"> Link with me</a><p>
-        <span class="icon-star-o"></span> <a href="http://visible-quality.blogspot.com" target="_blank"> Read my blog</a><br>
-        <span class="icon-youtube"></span> <a href="https://www.youtube.com/channel/UCrTlIKuIS-LmRk-aAbcxTKg" target="_blank"> Watch my videos</a><br>
-        <span class="icon-slideshare"></span> <a href="http://www.slideshare.net/maaretp" target="_blank"> Check my slides</a><br>
+        <ul>
+          <li>
+            <span class="icon-envelope-o"></span>
+            <a href="mailto:maaret@iki.fi">maaret@iki.fi</a>
+          </li>
+          <li>
+            <span class="icon-twitter-square"></span>
+            <a href="https://twitter.com/maaretp" target="_blank" rel="noopener noreferrer me" title="Twitter profile">Follow me</a>
+          </li>
+          <li>
+            <span class="icon-facebook-square"></span>
+            <a href="https://facebook.com/MaaretPy/" target="_blank" rel="noopener noreferrer me" title="Facebook Page">Like my page</a>
+          </li>
+          <li>
+            <span class="icon-linkedin-square"></span>
+            <a href="https://fi.linkedin.com/in/maaret" target="_blank" rel="noopener noreferrer me" title="LinkedIn profile">Link with me</a>
+          </li>
+        </ul>
+
+        <ul style="padding-top: 1em; padding-bottom: 1em;">
+          <li>
+            <span class="icon-star-o"></span>
+            <a href="https://visible-quality.blogspot.com" target="_blank" rel="noopener noreferrer me" title="Blog">Read my blog</a>
+          </li>
+          <li>
+            <span class="icon-youtube"></span>
+            <a href="https://www.youtube.com/channel/UCrTlIKuIS-LmRk-aAbcxTKg" target="_blank" rel="noopener noreferrer me" title="YouTube channel">Watch my videos</a>
+          </li>
+          <li>
+            <span class="icon-slideshare"></span>
+            <a href="https://www.slideshare.net/maaretp" target="_blank" rel="noopener noreferrer me" title="SlideShare">Check my slides</a>
+          </li>
+        </ul>
     </div>
 
     <nav class="footer-nav">
         <h3>My contributions ...</h3>
         <ul>
-            <li><span class="icon-star"></span><a href="myArticles.html"> Blog, &amp; Articles &amp; Podcasts</a></li>
+            <li>
+              <span class="icon-star"></span>
+              <a href="myArticles.html"> Blog, &amp; Articles &amp; Podcasts</a>
+            </li>
             <!--<li><a href="books.html">Books</a></li>-->
-            <li><span class="icon-fort-awesome"></span><a href="myTalks.html"> Speaking</a></li>
-            <li><span class="icon-book"></span><a href="http://exploratorytesting.xyz" target="_blank"> LeanPub: Exploratory Testing</a></li>
-            <li><span class="icon-book"></span><a href="http://mobprogrammingguidebook.xyz" target="_blank"> Mob Programming Guidebook</a></li>
-            <li><span class="icon-book"></span><a href="http://strongstylepairprogramming.xyz" target="_blank"> LeanPub: Strong-Style Pair Programming</a></li>
-            <li><span class="icon-ticket"></span><a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing" target="_blank">My talk and course brochures</a></li>
-
-
+            <li>
+              <span class="icon-fort-awesome"></span>
+              <a href="myTalks.html"> Speaking</a>
+            </li>
+            <li>
+              <span class="icon-book"></span>
+              <a href="http://exploratorytesting.xyz" target="_blank" rel="noopener noreferrer">LeanPub: Exploratory Testing</a>
+            </li>
+            <li>
+              <span class="icon-book"></span>
+              <a href="http://mobprogrammingguidebook.xyz" target="_blank" rel="noopener noreferrer">Mob Programming Guidebook</a>
+            </li>
+            <li>
+              <span class="icon-book"></span>
+              <a href="http://strongstylepairprogramming.xyz" target="_blank" rel="noopener noreferrer">LeanPub: Strong-Style Pair Programming</a>
+            </li>
+            <li>
+              <span class="icon-ticket"></span>
+              <a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing" target="_blank" rel="noopener noreferrer">My talk and course brochures</a>
+            </li>
         </ul>
     </nav>
 
     <div class="footer-elsewhere">
         <h3>... and my projects</h3>
         <ul>
-          <li><a href="http://europeantestingconference.eu"> European Testing Conference </a> </li>
+          <li><a href="https://europeantestingconference.eu"> European Testing Conference </a> </li>
           <li><a href="https://techvoices.org"> Tech Voices </a></li>
-          <li><a href="http://testausyhdistys.fi"> Finnish Association for Software Testing</a></li>
+          <li><a href="https://testausyhdistys.fi"> Finnish Association for Software Testing</a></li>
           <li><a href="https://www.meetup.com/Tech-Excellence-Finland/"> Tech Excellence Finland Meetup </a></li>
           <ku><a href="ETI.html">Exploratory Testing Index</a></li>
         </ul>
