--- a/myTalks.html
+++ b/myTalks.html
@@ -2,7 +2,19 @@
 <html dir="ltr" lang="en-US">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta charset="utf-8">
+
   <title>Speaking Engagements | Maaret Pyhäjärvi</title>
+  <meta property="og:title" content="Speaking Engagements">
+  <meta property="og:url" content="https://maaretp.com/myTalks.html">
+  <meta property="og:description" name="description" content="Speaking Engagements">
+  <meta property="og:site_name" content="maaretp.com">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+
+  <meta name="twitter:creator" content="@maaretp">
+  <meta name="author" content="Maaret Pyhäjärvi">
+
   <link href="https://fonts.googleapis.com/css?family=Lato|Lobster" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="new_styles.css" media="all" />
   <link rel="stylesheet" href="img/icomoon/style.css"></head>
