Adding book image and link.

--- a/ETI.html
+++ b/ETI.html
@@ -37,8 +37,18 @@
 
 <h1>Exploratory Testing Index</h1>
 
+<table>
+<td>
+  <a href="https://leanpub.com/exploratorytesting"><img src="img/et_cover_small.png"></a>
+</td>
+<td>
 <i><b>This index is a thematic analysis of my writing around exploratory testing.</i></b><p>
-<i>300/691 processed... </i><p>
+<i>300/691 blog posts processed... </i><p>
+To be reorganized, added to and published as <a href="https://leanpub.com/exploratorytesting">LeanPub book.</a><p>
+</td>
+
+
+</table>
 
 <h2>What is Exploratory Testing</h2>
 
