--- a/myTalks.html
+++ b/myTalks.html
@@ -270,6 +270,7 @@ Presenting a paper in an academic conference (ICST / NEXTA):
 <br />
 
 <i>An Exploratory Tester's lessons on Security Threat Modeling</i> <br />
+&nbsp; Speaker at a company's testing meetup, online (18.5.2020)
 &nbsp; Speaker at Code Europe Wroclaw 2017, Wroclaw, Poland (13.12.2017)<br />
 &nbsp; Speaker at Oredev 2017, Malmö, Sweden (6.-10.11.2017)<br />
 <br />
@@ -371,14 +372,14 @@ Presenting a paper in an academic conference (ICST / NEXTA):
 &nbsp; Speaker at Sanoma Knowledge Exchange in Helsinki, Finland (7.11.2016)<br />
 <br />
 
-<i>Tales from Developer Tester Collaboration</i> [<a href="http://www.slideshare.net/maaretp/tales-from-tester-developer-collaboration">slides</a>] &nbsp;- paired talk with Llewellyn Falco<br />
+<i>Tales from Developer Tester Collaboration</i> [<a href="http://www.slideshare.net/maaretp/tales-from-tester-developer-collaboration">slides</a>] &nbsp;<br />
 &nbsp; Keynote Speaker at Agile Serbia, Belgrade, Serbia (23.4.2016)<br />
 &nbsp; Opening talk Speaker at TestBash NY, New York, USA (6.11.2015)<br />
 &nbsp; Speaker at Software Testing Finland / Helsinki Agile Testing meetup (7.10.2015)<br />
 &nbsp; Speaker at a company competence network, Helsinki, Finland (10.9.2015)<br />
 <br />
 
-<i>Strong-Style Pairing&nbsp;</i>- paired talk with Llewellyn Falco  <a href="http://www.slideshare.net/llewellynfalco/strong-style-pairing">[slides]</a><br />
+<i>Strong-Style Pairing&nbsp;</i>  <a href="https://www.slideshare.net/maaretp/agile-2016-strongstyle-pairing">[slides]</a><br />
 &nbsp; Speaker at Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)<br />
 &nbsp; Speaker at Tech Excellence meetup in Helsinki, Finland (June 2016)<br />
 <br />
@@ -391,7 +392,7 @@ Presenting a paper in an academic conference (ICST / NEXTA):
 &nbsp; Trainer for Urasilta public course, Jyväskylä, Finland (7-8.9.2016)<br />
 <br />
 
-<i>Collaborative Exploratory and Unit Testing - How to Harness the Insights of Bug Discovery to Protect Your Code &nbsp;</i>- Paired workshop (1-day) with Llewellyn Falco<br />
+<i>Collaborative Exploratory and Unit Testing - How to Harness the Insights of Bug Discovery to Protect Your Code &nbsp;</i><br />
 &nbsp; Trainer for Ministry of Testing public course, Brighton, UK (8.3.2016)<br />
 &nbsp; Facilitator at TestBash NY, New York, USA (5.11.2015)<br />
 &nbsp; Facilitator at XP2015, Helsinki, Finland (25.5.2015)<br />
