Updating podcast appearances and talks.
20th podcast appearance. 15 sessions for 2020 so far (one not yet documented here).

--- a/myTalks.html
+++ b/myTalks.html
@@ -79,13 +79,20 @@
 
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
-</p>I'm taking a break from conferences after I reached 400 sessions Dec 13th 2019,
-happy to appear in podcasts, webinars and anything that requires no travel. <p>
-
-Presenting a paper in an academic conference (ICST / NEXTA):
-<ul>
-  <li> Test Automation Process Improvement in a DevOps Team: Experience Report at NEXTA 2020</li>
+  <ul>
+    <li>Mimmit Koodaa (Women who Code) Webinar August 7th
+      <br>Kuinka testaajaksi opitaan? - uranvaihtajan kesä koekaniinina
+      <br>(How to Learn to Become Tester - Career Changer's Summer as Lab Rat)</li>
+    <li><a href="https://stepinsummit.stepinforum.org">STEP-IN SUMMIT 2020 September 3-4th</a>
+      <br>TALK: Opportunity Cost Drives My Testing</li>
+    <li> ICST / NEXTA 2020 October 24th
+      <br> PAPER: Test Automation Process Improvement in a DevOps Team: Experience Report at NEXTA 2020</li>
+    <li> <a href="https://testingunited.com/day-2_2020/">Testing United Conference November 5-6th</a>
+      <br>KEYNOTE: Social Software Testing Approaches </li>
   </ul>
+
+</p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
+happy to appear in podcasts, webinars and anything that requires no travel. <p>
 
   <!--
   <H2>UPCOMING PUBLIC TRAININGS</H2>
@@ -104,6 +111,35 @@ Presenting a paper in an academic conference (ICST / NEXTA):
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>Exploratory Testing Shift Left and Right - What great exploratory testing looks under conditions of TOAD (Testing, Observability and DevOps)</i><br />
+&nbsp; Speaker at OmniTesting Conference (16.7.2020), Online<br />
+<br />
+
+<i>Opportunity Cost Drives my Testing</i><br />
+&nbsp; Speaker at Step-In Summit Conference (4.9.2020), Online<br />
+<br />
+
+<i>Social Software Testing Approaches</i><br />
+&nbsp; Keynote Speaker at Testing United Conference (5-6.11.2020), Online<br />
+<br />
+
+<i>Kuinka testaajaksi opitaan? - uranvaihtajan kesä koekaniinina (How to Learn to Become Tester - Career Changer's Summer as Lab Rat)</i><br />
+&nbsp; Speaker at Mimmit Koodaa (Women who Code) -webinar (7.8.2020), Online<br />
+<br />
+
+<i>An Exploratory Tester's lessons on Security Threat Modeling</i> <br />
+&nbsp; Speaker at a company's testing meetup, online (18.5.2020)
+&nbsp; Speaker at Code Europe Wroclaw 2017, Wroclaw, Poland (13.12.2017)<br />
+&nbsp; Speaker at Oredev 2017, Malmö, Sweden (6.-10.11.2017)<br />
+<br />
+
+<i>Ohjelmistotestauksen ensiaskeleet (First Steps to Software Testing) - half-day training </i><br />
+&nbsp; Trainer at Mimmit Koodaa (Women who Code) -training (23.4.2020), Online<br />
+&nbsp; Trainer at Mimmit Koodaa (Women who Code) -training (8.4.2020), Online<br />
+&nbsp; Trainer at Mimmit Koodaa (Women who Code) -training (26.3.2020), Online<br />
+&nbsp; Trainer at Mimmit Koodaa (Women who Code) -training (16.3.2020), Online<br />
+<br />
+
 <i>Exploratory Testing Essentials</i><br />
     &nbsp; Speaker at TechWell Webinar (2.4.2020), Online<br />
   <br />
@@ -119,6 +155,19 @@ Presenting a paper in an academic conference (ICST / NEXTA):
 
 <i>Exploratory Testing Essentials (4 hrs)</i><br />
     &nbsp; Trainer at Brewing Agile 2020 (4.3.2020), Gothenburg, Sweden<br />
+  <br />
+
+<i>Exploratory Testing Work Course</i><br />
+  &nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (18-19.3.2020) <br />
+  &nbsp; Trainer for a customer organization (1-day), London, UK (16.1.2019) <br />
+  &nbsp; Trainer for Alma (2-days), Helsinki, Finland (4-5.9.2018) <br />
+  &nbsp; Trainer for F-Secure internal (1-day), Oulu, Finland 15.8.2018 <br />
+  &nbsp; Trainer for F-Secure internal (1-day), Helsinki, Finland 19.6.2018 <br />
+  &nbsp; Trainer for Alma (2-days), Helsinki, Finland (15-16.2.2017) <br />
+  &nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (13.4.2016)<br />
+  &nbsp; Trainer for Ministry of Testing public course (1-day), Brighton, UK (22.10.2015)<br />
+  &nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (26.11.2015)<br />
+  &nbsp; Trainer for Altom public course (1-day), Helsinki, Finland (6.5.2015)<br />
   <br />
 
 <i>Exploratory Testing on Computer Interfaces</i><br />
@@ -240,19 +289,6 @@ Presenting a paper in an academic conference (ICST / NEXTA):
 &nbsp; Speaker at European Testing Conference 2016, Bucharest, Romania (12.2.2016)<br />
 <br />
 
-<i>Exploratory Testing Work Course</i><br />
-&nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (18-19.3.2020) <br />
-&nbsp; Trainer for a customer organization (1-day), London, UK (16.1.2019) <br />
-&nbsp; Trainer for Alma (2-days), Helsinki, Finland (4-5.9.2018) <br />
-&nbsp; Trainer for F-Secure internal (1-day), Oulu, Finland 15.8.2018 <br />
-&nbsp; Trainer for F-Secure internal (1-day), Helsinki, Finland 19.6.2018 <br />
-&nbsp; Trainer for Alma (2-days), Helsinki, Finland (15-16.2.2017) <br />
-&nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (13.4.2016)<br />
-&nbsp; Trainer for Ministry of Testing public course (1-day), Brighton, UK (22.10.2015)<br />
-&nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (26.11.2015)<br />
-&nbsp; Trainer for Altom public course (1-day), Helsinki, Finland (6.5.2015)<br />
-<br />
-
 <i>Making Teams Awesome </i> <br />
 &nbsp; Speaker at STAREast Conference 2018, Orlando, USA (29.4-4.5.2018)<br />
 &nbsp; Keynote Speaker at Testing Portugal 2017, Lisbon, Portugal (28.11.2017)<br />
@@ -267,12 +303,6 @@ Presenting a paper in an academic conference (ICST / NEXTA):
 <i>Learning through Osmosis </i><br />
 &nbsp; Keynote Speaker at Agile Testing Days 2017, Potsdam, Germany (13-17.11.2017) <br />
 &nbsp; Keynote Speaker at Agile Day Riga 2017, Riga, Latvia (7-8.7.2017) <br />
-<br />
-
-<i>An Exploratory Tester's lessons on Security Threat Modeling</i> <br />
-&nbsp; Speaker at a company's testing meetup, online (18.5.2020)
-&nbsp; Speaker at Code Europe Wroclaw 2017, Wroclaw, Poland (13.12.2017)<br />
-&nbsp; Speaker at Oredev 2017, Malmö, Sweden (6.-10.11.2017)<br />
 <br />
 
 <i>Breaking Illusions - Perspectives into Testing</i> <br />
@@ -491,18 +521,6 @@ Presenting a paper in an academic conference (ICST / NEXTA):
 
 </td>
 </table>
-
-<!-- Hotjar Tracking Code for http://maaretp.com -->
-<script>
-   (function(h,o,t,j,a,r){
-       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-       h._hjSettings={hjid:183445,hjsv:5};
-       a=o.getElementsByTagName('head')[0];
-       r=o.createElement('script');r.async=1;
-       r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-       a.appendChild(r);
-   })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
 
 </body>
 
