Title on main page, style bugs

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     International Keynote Speaker. <br>
     Author. <br>
     Conference Organizer and Community Facilitator. <br>
-    Lead Quality Engineer at F-Secure. <br>
+    Principal Quality Engineer at Vaisala. <br>
     She/Her. <br>
     <br>
 
@@ -136,7 +136,6 @@
               <span class="icon-star"></span>
               <a href="myArticles.html"> Blog, &amp; Articles &amp; Podcasts</a>
             </li>
-            <!--<li><a href="books.html">Books</a></li>-->
             <li>
               <span class="icon-fort-awesome"></span>
               <a href="myTalks.html"> Speaking</a>
