--- a/myArticles.html
+++ b/myArticles.html
@@ -44,7 +44,7 @@
     <li><a href="http://strongstylepairprogramming.xyz">Strong-Style Pair Programming</a></li>
   </ul>
 
-  IMPRESSIVE COLLECTIONS
+  <h2>IMPRESSIVE COLLECTIONS</h2>
   <ul style="text-align: left;">
     <li> <a href="https://maaretp.com/ETI.html">Exploratory Testing Index </a>
       <i>(stuff on ET I have written, categorized)</i></li>
