Lost articles, talks and podcasts.

--- a/myArticles.html
+++ b/myArticles.html
@@ -60,8 +60,10 @@
   <h2>PODCAST APPEARANCES</h2>
 
   <ul style="text-align: left;">
+    <li>Quality Coaching, recorded in July 15th.
     <li>AB Testing, <a href="https://www.angryweasel.com/ABTesting/ab-testing-episode-124-learning-with-maaret/">Learning with Maaret</a> on July 13th, 2020 </li>
     <li>Developer Melange, <a href="https://developermelange.com/034-time-travel-to-the-past/">Time Travel to the Past</a> July 1st, 2020</li>
+    <li>Modern Agile Show, <a href="https://www.youtube.com/watch?v=IETVizs_x2M">Interview with Maaret Pyhäjärvi</a>, April 22nd, 2020</li>
     <li>Agilpodden, <a href="https://agilpodden.podbean.com/e/77-agile-without-product-owner-eng/">Agile without Product Owner</a> April 30th, 2020 </li>
     <li>Webbidevaus.fi, <a href="https://webbidevaus.fi/44">React Finland 2: Designkirjastot ja testaaminen</a> May 2019 </li>
     <li>IT Career Energizer, <a href="https://podcasts.apple.com/us/podcast/learn-not-to-be-afraid-doing-things-differently-maaret/id1231387865?i=1000435108093">Learn Not to be Afraid of Doing Things Differently with Maaret Pyhajarvi</a> April 2019</li>
@@ -131,6 +133,21 @@
       In <i>Proceedings of HICCS</i>, 2002.</li>
   </ul>
 
+<h2>Articles others write about me</h2>
+
+  <ul>
+    <li><a href="https://www.aalto.fi/en/news/you-can-change-the-world-in-this-field-two-technology-alumni-talk-about-their-careers">You Can Change the World in This Field</a>, Aalto University News June 8th 2020</li>
+    <li><a href="https://mimmitkoodaa.ohjelmistoebusiness.fi/blogi/tyon-voi-raataloida-itselleen-sopivaksi/">Työn voi räätälöidä itselleen sopivaksi</a>, spring 2020</li>
+    <li><a href="https://www.tivi.fi/uutiset/maaret-pyhaharvi-uskoo-etta-tekoaly-korvaa-nopeammin-koodaajia-kuin-testaajia-testaajien-tekemaan-suuntaan-ollaan-jo-menossa/610716c1-8d2f-46de-b1c8-4a96ecfe49c4">Maaret Pyhäjärvi uskoo että tekoäly korvaa nopeammin koodaajia kuin testaajia: "Testaajien tekemään suuntaan ollaan jo menossa"</a> in Tivi August 30th, 2019</li>
+    <li><a href="https://www.tekniikkatalous.fi/uutiset/buginen-jarjestelma-on-it-toimittajalle-rahasampo/cc8573c1-b224-3682-8b8a-330837fc5d75">Buginen järjestelmä on IT-toimittajalle rahasampo</a>, August 26th, 2012</li>
+  </ul>
+
+<h2>Awards and Nominations</h2>
+
+<ul>
+  <li>ICT 100 Most Influential 2019 by Tivi, December 2019</li>
+  <li>Most Influential Agile Testing Professional Person 2016, awarded by Agile Testing Days</li>
+</ul>
 
 </body>
 
