--- a/myTalks.html
+++ b/myTalks.html
@@ -85,8 +85,11 @@
       <br>(How to Learn to Become Tester - Career Changer's Summer as Lab Rat)</li>
     <li><a href="https://stepinsummit.stepinforum.org">STEP-IN SUMMIT 2020 September 3-4th</a>
       <br>TALK: Opportunity Cost Drives My Testing</li>
+    <li>
     <li> ICST / NEXTA 2020 October 24th
       <br> PAPER: Test Automation Process Improvement in a DevOps Team: Experience Report at NEXTA 2020</li>
+    <li> <a href="https://theshift.fi/persons/maaret-pyhajarvi/">SHIFT Business Webstival 2020</a>, October 27-28th.
+      <br>TALK</li>
     <li> <a href="https://testingunited.com/day-2_2020/">Testing United Conference November 5-6th</a>
       <br>KEYNOTE: Social Software Testing Approaches </li>
   </ul>
